--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "strict": true,
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"],
+      "@/tests/*": ["../tests/*"]
+    },
   },
   "include": ["src"]
 }
