--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
+    "test:staged": "npm test -- --findRelatedTests",
     "test:coverage": "npm test -- --coverage"
   },
   "keywords": [],
@@ -21,6 +22,7 @@
     "@types/node": "^20.5.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "jest": "^29.6.2",
+    "lint-staged": "^14.0.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
