--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
-    "test:coverage": "npm test -- --coverage"
+    "test:coverage": "npm test -- --coverage",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.6.2",
     "lint-staged": "^14.0.0",
     "ts-jest": "^29.1.1",
