--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "scripts": {
     "start": "node dist/main",
+    "dev": "ts-node-dev --respawn --transpile-only src/main",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "lint": "eslint . ",
     "lint:fix": "npm run lint -- --fix",
@@ -44,6 +45,7 @@
     "jest": "^29.6.2",
     "lint-staged": "^14.0.0",
     "ts-jest": "^29.1.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
 }
