--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-standard-with-typescript": "^37.0.0",
     "husky": "^8.0.3",
     "jest": "^29.6.2",
+    "jest-mock-extended": "^3.0.5",
     "lint-staged": "^14.0.0",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
