--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,9 @@
       "extends": "standard-with-typescript",
       "parserOptions": {
         "project": "./tsconfig.json"
+      },
+      "rules": {
+        "@typescript-eslint/consistent-type-definitions": "off"
       }
     }
   ]
