refactor: create namespace of input and output interfaces

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
         "project": "./tsconfig.json"
       },
       "rules": {
-        "@typescript-eslint/consistent-type-definitions": "off"
+        "@typescript-eslint/consistent-type-definitions": "off",
+        "@typescript-eslint/no-namespace": "off"
       }
     }
   ]
