--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test:integration": "npm test -- --watch -c jest.integration.config.js"
   },
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "module-alias": "^2.2.3",
     "rimraf": "^5.0.1"
   },
@@ -45,6 +46,7 @@
     "jest": "^29.6.2",
     "jest-mock-extended": "^3.0.5",
     "lint-staged": "^14.0.0",
+    "prisma": "^5.1.1",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
