--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
       },
       "rules": {
         "@typescript-eslint/consistent-type-definitions": "off",
-        "@typescript-eslint/no-namespace": "off"
+        "@typescript-eslint/no-namespace": "off",
+        "@typescript-eslint/no-extraneous-class": "off"
       }
     }
   ]
