--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "module-alias": "^2.2.3",
-    "rimraf": "^5.0.1"
+    "rimraf": "^5.0.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.0",
+    "@types/uuid": "^9.0.2",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "husky": "^8.0.3",
     "jest": "^29.6.2",
