--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jest": "^29.6.2",
     "jest-mock-extended": "^3.0.5",
     "lint-staged": "^14.0.0",
+    "mock-amqplib": "^1.8.1",
     "prisma": "^5.1.1",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
