--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,8 @@
         "@typescript-eslint/no-extraneous-class": "off",
         "@typescript-eslint/strict-boolean-expressions": "off",
         "@typescript-eslint/dot-notation": "off",
-        "@typescript-eslint/no-non-null-assertion": "off"
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/no-confusing-void-expression": "off"
       }
     }
   ]
