--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "amqplib": "^0.10.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "module-alias": "^2.2.3",
     "rimraf": "^5.0.1",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.1",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/module-alias": "^2.0.2",
