--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@jest-mock/express": "^2.0.2",
     "@types/amqplib": "^0.10.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
