--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/jest": "^29.5.3",
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.0",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "husky": "^8.0.3",
@@ -60,6 +61,7 @@
     "lint-staged": "^14.0.0",
     "mock-amqplib": "^1.8.1",
     "prisma": "^5.1.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
