--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-confusing-void-expression": "off",
         "@typescript-eslint/no-misused-promises": "off",
-        "@typescript-eslint/await-thenable": "off"
+        "@typescript-eslint/await-thenable": "off",
+        "@typescript-eslint/no-floating-promises": "off"
       }
     }
   ]
