--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "module-alias": "^2.2.3",
+    "nodemailer": "^6.9.4",
     "rimraf": "^5.0.1",
     "uuid": "^9.0.0"
   },
@@ -52,6 +53,7 @@
     "@types/jest": "^29.5.3",
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.0",
+    "@types/nodemailer": "^6.4.9",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
     "eslint-config-standard-with-typescript": "^37.0.0",
