--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "email": "silviolucas_santos@hotmail.com"
   },
   "scripts": {
-    "start": "node dist/main",
-    "dev": "ts-node-dev --respawn --transpile-only src/main",
+    "start": "node -r dotenv/config dist/main",
+    "dev": "ts-node-dev --respawn --transpile-only -r dotenv/config src/main",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "lint": "eslint . ",
     "lint:fix": "npm run lint -- --fix",
@@ -49,6 +49,7 @@
     "@jest-mock/express": "^2.0.2",
     "@types/amqplib": "^0.10.1",
     "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/module-alias": "^2.0.2",
@@ -56,6 +57,7 @@
     "@types/nodemailer": "^6.4.9",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
+    "dotenv": "^16.3.1",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "husky": "^8.0.3",
     "jest": "^29.6.2",
