refactor: apply variables .env in project

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-DATABASE_URL="postgresql://postgres:root@localhost:5432/ms_node?schema=public"
+DATABASE_URL=
+EMAIL_SENDER=
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS=
