--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jest-mock-extended": "^3.0.5",
     "lint-staged": "^14.0.0",
     "mock-amqplib": "^1.8.1",
+    "mockdate": "^3.0.5",
     "prisma": "^5.1.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
