--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@prisma/client": "^5.1.1",
     "amqplib": "^0.10.3",
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "module-alias": "^2.2.3",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@jest-mock/express": "^2.0.2",
     "@types/amqplib": "^0.10.1",
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
