refactor: adjust the .env of all services

--- a/payment/.env.example
+++ b/payment/.env.example
@@ -1,8 +1,5 @@
 PORT=
 DATABASE_URL=
-EMAIL_SENDER=
-EMAIL_HOST=
-EMAIL_PORT=
-EMAIL_USER=
-EMAIL_PASS=
+RABBITMQ_URL=
+ASAAS_URL_API=
 ASAAS_KEY_API=
