--- a/event/package.json
+++ b/event/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "microservice-node",
+  "name": "microservice-event",
   "version": "5.1.0",
   "description": "Microservice in node using messaging services with clean architecture and TDD",
   "keywords": [
@@ -12,8 +12,7 @@
     "node",
     "typescript",
     "jest",
-    "rabbitmq",
-    "kafka"
+    "rabbitmq"
   ],
   "author": {
     "name": "Silvio Lucas - SLDS",
@@ -38,7 +37,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "module-alias": "^2.2.3",
-    "nodemailer": "^6.9.4",
     "rimraf": "^5.0.1",
     "uuid": "^9.0.0"
   },
@@ -52,7 +50,6 @@
     "@types/jest": "^29.5.3",
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.0",
-    "@types/nodemailer": "^6.4.9",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
     "dotenv": "^16.3.1",
@@ -60,7 +57,6 @@
     "jest": "^29.6.2",
     "jest-mock-extended": "^3.0.5",
     "mock-amqplib": "^1.8.1",
-    "mockdate": "^3.0.5",
     "prisma": "^5.1.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
