--- a/payment/package.json
+++ b/payment/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "microservice-node",
+  "name": "microservice-payment",
   "version": "5.1.0",
   "description": "Microservice in node using messaging services with clean architecture and TDD",
   "keywords": [
@@ -38,7 +38,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "module-alias": "^2.2.3",
-    "nodemailer": "^6.9.4",
     "rimraf": "^5.0.1",
     "uuid": "^9.0.0"
   },
@@ -52,7 +51,6 @@
     "@types/jest": "^29.5.3",
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.0",
-    "@types/nodemailer": "^6.4.9",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
     "dotenv": "^16.3.1",
