--- a/user/package.json
+++ b/user/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "microservice-node",
+  "name": "microservice-user",
   "version": "5.1.0",
   "description": "Microservice in node using messaging services with clean architecture and TDD",
   "keywords": [
@@ -33,34 +33,24 @@
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
-    "amqplib": "^0.10.3",
-    "axios": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "module-alias": "^2.2.3",
-    "nodemailer": "^6.9.4",
-    "rimraf": "^5.0.1",
-    "uuid": "^9.0.0"
+    "rimraf": "^5.0.1"
   },
   "devDependencies": {
     "@jest-mock/express": "^2.0.2",
-    "@types/amqplib": "^0.10.1",
-    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.0",
-    "@types/nodemailer": "^6.4.9",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^9.0.2",
     "dotenv": "^16.3.1",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "jest": "^29.6.2",
     "jest-mock-extended": "^3.0.5",
-    "mock-amqplib": "^1.8.1",
-    "mockdate": "^3.0.5",
     "prisma": "^5.1.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
