--- a/email/package.json
+++ b/email/package.json
@@ -48,6 +48,8 @@
     "dotenv": "^16.3.1",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "jest": "^29.6.2",
+    "@types/supertest": "^2.0.12",
+    "supertest": "^6.3.3",
     "jest-mock-extended": "^3.0.5",
     "mock-amqplib": "^1.8.1",
     "ts-jest": "^29.1.1",
