--- a/event/package.json
+++ b/event/package.json
@@ -38,6 +38,7 @@
     "express": "^4.18.2",
     "module-alias": "^2.2.3",
     "rimraf": "^5.0.1",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -51,6 +52,7 @@
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.0",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.2",
     "dotenv": "^16.3.1",
     "eslint-config-standard-with-typescript": "^37.0.0",
