--- a/user/package.json
+++ b/user/package.json
@@ -36,7 +36,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "module-alias": "^2.2.3",
-    "rimraf": "^5.0.1"
+    "rimraf": "^5.0.1",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@jest-mock/express": "^2.0.2",
@@ -47,6 +48,7 @@
     "@types/module-alias": "^2.0.2",
     "@types/node": "^20.5.0",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "dotenv": "^16.3.1",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "jest": "^29.6.2",
